maybe fixed date-section issues on mobile?

--- a/style.css
+++ b/style.css
@@ -316,11 +316,33 @@ body.WIP-page {
     height: auto; 
     padding-top: 40px; 
     color: white;
-    position: absolute; 
+    position: absolute !important; 
     z-index: 999999 !important;
+    top: 140px;
     left: 120px;
     opacity: 0;
     animation: animate 1s ease-in-out 0.6s 1 forwards;
+}
+
+@media (max-height:1000px){
+    .date-section {
+        top: 100px;
+    }
+}
+@media (max-height:900px){
+    .date-section {
+        top: 60px;
+    }
+}
+@media (max-height:820px){
+    .date-section {
+        top: 20px;
+    }
+}
+@media (max-height:740px){
+    .date-section {
+        top: 0px;
+    }
 }
 
 .date-section h1, .date-section h2 {
@@ -347,7 +369,7 @@ body.WIP-page {
 }
 
 .WIP-page .container {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 50%;
     transform: translate(-50%, 0);
